// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTask connector mapStateToProps generates the correct props 1`] = `
Object {
  "addTask": Object {
    "addTask": "Add Task",
    "addTaskButton": "Add Task",
    "assignToMeLabel": "Assign task to me",
    "backButton": "Back",
    "dateErrorText": "Date is required",
    "dateLabel": "Date by which task is due",
    "descriptionErrorText": "Description is required",
    "descriptionLabel": "Task description",
    "formError": "There was a problem adding this task, please try again.",
    "notification": Object {
      "title": "Task added",
    },
    "serverError": "A problem occured when submitted the form, please try again.",
    "submitButton": "Add Task",
    "titleErrorText": "Title is required",
    "titleLabel": "Task title",
    "userPickerLabel": "Select a user",
    "userPickerPlaceholder": "Enter a housing officer name",
  },
  "arrearsId": "ARREARS_ID_FROM_URL",
  "breadcrumb": Array [
    Object {
      "href": "#{Dashboards.Core.CustomerBaseURL}",
      "id": "breadcrumb-dashboard",
      "label": "Dashboard",
    },
    Object {
      "id": "breadcrumb-arrearsDashboard",
      "label": "My arrears",
      "to": "/",
    },
    Object {
      "label": "Arrears details",
      "to": "/arrears-details/ARREARS_ID_FROM_URL",
    },
    Object {
      "id": "breadcrumb-Add Task",
      "label": "Add Task",
    },
  ],
  "error": undefined,
  "errorMessage": "A problem occured when submitted the form, please try again.",
  "heading": "Add Task",
  "housingOfficerSearchResults": Array [
    Object {
      "domainName": "NHILL\\\\aoflaherty",
      "emailAddress": "Aisling.OFlaherty@nhhg.org.uk",
      "fullname": "Aisling O'Flaherty",
      "homeTelephoneNumber": "02038150210",
      "id": "01973660-bd18-e811-80c8-005056825b41",
      "mobileTelephoneNumber": null,
      "patchName": "CA814",
      "team": Object {
        "id": "17104610-f317-e811-80c8-005056825b41",
        "name": "PRH",
      },
      "title": "Housing Officer",
      "username": "aoflaherty",
    },
    Object {
      "domainName": "NHILL\\\\afraserbailey",
      "emailAddress": "Akima.F.Bailey@nhhg.org.uk",
      "fullname": "Akima Fraser Bailey",
      "homeTelephoneNumber": "02038150530",
      "id": "03973660-bd18-e811-80c8-005056825b41",
      "mobileTelephoneNumber": null,
      "patchName": null,
      "team": Object {
        "id": "17104610-f317-e811-80c8-005056825b41",
        "name": "PRH",
      },
      "title": "Housing Operations Manager",
      "username": "afraserbailey",
    },
    Object {
      "domainName": "NHILL\\\\apettifor",
      "emailAddress": "Ayesha.Pettifor@nhhg.org.uk",
      "fullname": "Ayesha Pettifor",
      "homeTelephoneNumber": "02038150804",
      "id": "37973660-bd18-e811-80c8-005056825b41",
      "mobileTelephoneNumber": null,
      "patchName": null,
      "team": Object {
        "id": "38104610-f317-e811-80c8-005056825b41",
        "name": "Business Improvement Directorate",
      },
      "title": "Team Co-ordinator",
      "username": "apettifor",
    },
  ],
  "loading": false,
  "loggedInUserId": "auth0|5a5f2614de16214961915a31",
  "notification": Object {
    "title": "Task added",
  },
  "redirectToDetailsPage": [Function],
  "userFullName": "Mark Brownie",
  "userId": "auth0|5a5f2614de16214961915a31",
}
`;

exports[`AddTask connector mergeProps generates the correct props 1`] = `
Object {
  "addTask": Object {
    "addTask": "Add Task",
    "addTaskButton": "Add Task",
    "assignToMeLabel": "Assign task to me",
    "backButton": "Back",
    "dateErrorText": "Date is required",
    "dateLabel": "Date by which task is due",
    "descriptionErrorText": "Description is required",
    "descriptionLabel": "Task description",
    "formError": "There was a problem adding this task, please try again.",
    "notification": Object {
      "title": "Task added",
    },
    "serverError": "A problem occured when submitted the form, please try again.",
    "submitButton": "Add Task",
    "titleErrorText": "Title is required",
    "titleLabel": "Task title",
    "userPickerLabel": "Select a user",
    "userPickerPlaceholder": "Enter a housing officer name",
  },
  "arrearsId": "ARREARS_ID_FROM_URL",
  "bar": "baz",
  "clearUserSearch": [Function],
  "error": undefined,
  "errorMessage": "A problem occured when submitted the form, please try again.",
  "housingOfficerSearchResults": Array [
    Object {
      "domainName": "NHILL\\\\aoflaherty",
      "emailAddress": "Aisling.OFlaherty@nhhg.org.uk",
      "fullname": "Aisling O'Flaherty",
      "homeTelephoneNumber": "02038150210",
      "id": "01973660-bd18-e811-80c8-005056825b41",
      "mobileTelephoneNumber": null,
      "patchName": "CA814",
      "team": Object {
        "id": "17104610-f317-e811-80c8-005056825b41",
        "name": "PRH",
      },
      "title": "Housing Officer",
      "username": "aoflaherty",
    },
    Object {
      "domainName": "NHILL\\\\afraserbailey",
      "emailAddress": "Akima.F.Bailey@nhhg.org.uk",
      "fullname": "Akima Fraser Bailey",
      "homeTelephoneNumber": "02038150530",
      "id": "03973660-bd18-e811-80c8-005056825b41",
      "mobileTelephoneNumber": null,
      "patchName": null,
      "team": Object {
        "id": "17104610-f317-e811-80c8-005056825b41",
        "name": "PRH",
      },
      "title": "Housing Operations Manager",
      "username": "afraserbailey",
    },
    Object {
      "domainName": "NHILL\\\\apettifor",
      "emailAddress": "Ayesha.Pettifor@nhhg.org.uk",
      "fullname": "Ayesha Pettifor",
      "homeTelephoneNumber": "02038150804",
      "id": "37973660-bd18-e811-80c8-005056825b41",
      "mobileTelephoneNumber": null,
      "patchName": null,
      "team": Object {
        "id": "38104610-f317-e811-80c8-005056825b41",
        "name": "Business Improvement Directorate",
      },
      "title": "Team Co-ordinator",
      "username": "apettifor",
    },
  ],
  "loading": false,
  "loggedInUserId": "auth0|5a5f2614de16214961915a31",
  "match": Object {
    "params": Object {
      "arrearsId": "ARREARS_ID_FROM_URL",
    },
  },
  "onBack": [Function],
  "onDisplayFormError": [Function],
  "onSearch": [Function],
  "onSubmit": [Function],
  "onUnmount": [Function],
  "updatePageHeader": [Function],
  "userFullName": "Mark Brownie",
}
`;

exports[`AddTask connector mergeProps performs the correct actions for onSubmit 1`] = `
Object {
  "dataBddPrefix": "addTask",
  "icon": "success",
  "lines": Array [
    Object {
      "text": "TITLE 19/09/2018",
    },
  ],
  "notificationType": "confirmation",
  "title": "Task added",
}
`;
